# glmmrGPU

./: CMakeLists.txt  README.md  X.csv  model.txt  y.csv
data/: X.csv  model.txt  result.csv  u.csv  y.csv
include/: covariance.hpp  cuda_cholesky.h  general.h  interpreter.h  maths.h  matrixw.hpp  model.hpp  modelmatrix.hpp  modeloptim.hpp  randomeffects.hpp
src/: cuda_cholesky.cu  main.cpp
